# fastapi-auth

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  fauth.db  pyproject.toml  requirements.txt
src/fauth/: database.py  init_db.py  main.py  models.py  schemas.py  utils.py
src/fauth/templates/: base.html  index.html  login.html  register.html
